--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <!-- SECCIÓN JUEGOS -->
         <section id="juegos-section" class="active">
             <div class="gallery__container" id="gallery">
-                <!-- Los juegos se cargan desde data.js -->
+                <p style="color: #aaa; text-align: center;">Cargando juegos...</p>
             </div>
             <div class="load-more-container">
                 <button id="loadMoreBtn" class="btn-load-more">Ver más juegos ↓</button>
@@ -188,7 +188,7 @@
         <!-- SECCIÓN SISTEMAS -->
         <section id="sistemas-section">
             <div class="gallery-sistemas" id="gallerySistemas">
-                <p style="color: #aaa; font-size: 14px;">Cargando sistemas operativos...</p>
+                <p style="color: #aaa; font-size: 14px; text-align: center;">Cargando sistemas operativos...</p>
             </div>
         </section>
 
@@ -253,7 +253,7 @@
         </div>
     </div>
 
-    <!-- BOTONES Y MODALES ADICIONALES -->
+    <!-- BOTONES Y MODALES -->
     <button id="btnNovato" class="btn-novato">🎮 Soy nuevo</button>
     <div id="tutorialModal" class="tutorial-modal">
         <div class="tutorial-content">
@@ -268,26 +268,41 @@
         <div id="juegosRecomendados" class="juegos-rec"></div>
     </div>
 
-    <!-- NOTIFICACIONES Y BOTONES FLotantes -->
+    <!-- NOTIFICACIONES Y BOTONES -->
     <div id="notifications"></div>
     <button onclick="randomGame()" style="position: fixed; bottom: 80px; right: 20px; z-index: 1000; background: #9c27b0; color: white; border: none; padding: 15px; border-radius: 50%; font-size: 18px; cursor: pointer;">🎲</button>
     <button onclick="enableLowResourceMode()" style="position: fixed; bottom: 140px; right: 20px; z-index: 1000; background: #2196F3; color: white; border: none; padding: 15px; border-radius: 50%; font-size: 18px; cursor: pointer;">📱</button>
 
-    <!-- CARGA DE DATOS Y LÓGICA -->
+    <!-- CARGA DE SCRIPTS EN ORDEN -->
     <script src="data.js"></script>
+    <script src="sistemas.js"></script>
+    <script src="script.js"></script>
+
     <script>
         // ================================
-        // 1. MANEJO DE PESTAÑAS Y CARGA DINÁMICA DE SISTEMAS
+        // 1. MANEJO DE PESTAÑAS (ÚNICO DOMContentLoaded)
         // ================================
         document.addEventListener('DOMContentLoaded', function () {
             const tabs = document.querySelectorAll('.tab-btn');
             const juegosSection = document.getElementById('juegos-section');
             const sistemasSection = document.getElementById('sistemas-section');
-            let sistemasCargados = false;
 
+            // Verificar si recursos y sistemas están definidos
+            if (!window.recursos) {
+                document.getElementById('gallery').innerHTML = '<p style="color: #ff3366; text-align: center;">❌ Error: No se cargaron los juegos. Revisa data.js</p>';
+            } else {
+                loadGames(); // Carga inicial de juegos
+            }
+
+            if (!window.sistemas) {
+                document.getElementById('gallerySistemas').innerHTML = '<p style="color: #ff3366; text-align: center;">❌ Error: No se cargaron los sistemas. Revisa sistemas.js</p>';
+            } else {
+                mostrarSistemas();
+            }
+
+            // Cambiar entre pestañas
             tabs.forEach(tab => {
-                tab.addEventListener('click', async () => {
-                    // Cambiar pestaña activa
+                tab.addEventListener('click', () => {
                     tabs.forEach(t => t.classList.remove('active'));
                     tab.classList.add('active');
 
@@ -296,26 +311,67 @@
                         sistemasSection.classList.remove('active');
                     } else {
                         sistemasSection.classList.add('active');
-                        // Cargar sistemas.js solo una vez
-                        if (!sistemasCargados) {
-                            try {
-                                await import('./sistemas.js');
-                                mostrarSistemas();
-                                sistemasCargados = true;
-                            } catch (err) {
-                                document.getElementById('gallerySistemas').innerHTML = `
-                                    <p style="color: #ff3366; text-align: center;">
-                                        ❌ Error: No se pudo cargar sistemas.js<br>
-                                        <small>${err.message}</small>
-                                    </p>
-                                `;
-                            }
-                        }
+                        juegosSection.classList.remove('active');
                     }
                 });
             });
 
-            // Mostrar tarjetas de sistemas
+            // ================================
+            // 2. CARGA DE JUEGOS
+            // ================================
+            let displayedGames = 0;
+            const gamesPerLoad = 2;
+
+            function loadGames() {
+                const gallery = document.getElementById('gallery');
+                const toLoad = recursos.slice(displayedGames, displayedGames + gamesPerLoad);
+
+                if (toLoad.length === 0 && displayedGames === 0) {
+                    gallery.innerHTML = '<p style="color: #aaa; text-align: center;">No hay juegos disponibles.</p>';
+                    return;
+                }
+
+                const fragment = document.createDocumentFragment();
+                toLoad.forEach(game => {
+                    const img = document.createElement('img');
+                    img.src = game.imagen;
+                    img.alt = game.nombre;
+                    img.classList.add('game-item');
+                    img.dataset.gameId = game.id;
+                    img.addEventListener('click', () => openModal(game));
+                    fragment.appendChild(img);
+                });
+
+                gallery.innerHTML = ''; // Limpia mensaje de carga
+                gallery.appendChild(fragment);
+                displayedGames += toLoad.length;
+
+                const loadMoreBtn = document.getElementById('loadMoreBtn');
+                if (displayedGames >= recursos.length) {
+                    loadMoreBtn.style.display = 'none';
+                }
+            }
+
+            document.getElementById('loadMoreBtn')?.addEventListener('click', loadGames);
+
+            // ================================
+            // 3. BÚSQUEDA
+            // ================================
+            document.getElementById('searchInput').addEventListener('input', function () {
+                const term = this.value.toLowerCase();
+                document.querySelectorAll('.game-item').forEach(img => {
+                    const gameId = img.dataset.gameId;
+                    const game = recursos.find(g => g.id == gameId);
+                    if (game) {
+                        const matches = game.nombre.toLowerCase().includes(term) || game.tipo.toLowerCase().includes(term);
+                        img.style.display = matches ? 'block' : 'none';
+                    }
+                });
+            });
+
+            // ================================
+            // 4. MOSTRAR SISTEMAS
+            // ================================
             function mostrarSistemas() {
                 const contenedor = document.getElementById('gallerySistemas');
                 contenedor.innerHTML = '';
@@ -339,109 +395,97 @@
                     contenedor.appendChild(tarjeta);
                 });
             }
-        });
-
-        // ================================
-        // 2. DETECTOR DE HARDWARE (como antes)
-        // ================================
-        document.addEventListener('DOMContentLoaded', function () {
-            const recomendacionBox = document.getElementById('recomendacionBox');
-            const recomendacionText = document.getElementById('recomendacionText');
-            const juegosRecomendados = document.getElementById('juegosRecomendados');
-
-            function detectarGPU() {
-                const canvas = document.createElement('canvas');
-                const gl = canvas.getContext?.('webgl') || canvas.getContext?.('experimental-webgl');
-                if (!gl) return 'GPU no detectada';
-                const debugInfo = gl.getExtension('WEBGL_debug_renderer_info');
-                if (debugInfo) {
-                    return gl.getParameter(debugInfo.UNMASKED_RENDERER_WEBGL);
-                }
-                return 'GPU integrada o desconocida';
-            }
-
-            function detectarRAM() {
-                return navigator.deviceMemory || 4;
-            }
-
-            function detectarSO() {
-                const ua = navigator.userAgent;
-                if (ua.includes('Win')) return 'Windows';
-                if (ua.includes('Mac')) return 'macOS';
-                if (ua.includes('Linux')) return 'Linux';
-                if (ua.includes('Android')) return 'Android';
-                if (ua.includes('like Mac')) return 'iOS';
-                return 'Desconocido';
-            }
-
-            function recomendarJuegos() {
-                const gpu = detectarGPU();
-                const ram = detectarRAM();
-                const so = detectarSO();
-                recomendacionText.innerHTML = `
-                    <strong>Tu PC:</strong> ${ram} GB RAM, ${so}<br>
-                    <strong>GPU:</strong> ${gpu.substring(0, 50)}...
-                `;
-                const recomendados = (window.recursos || []).slice(0, 3);
-                juegosRecomendados.innerHTML = '';
-                if (recomendados.length > 0) {
-                    recomendados.forEach(juego => {
-                        const img = document.createElement('img');
-                        img.src = juego.imagen;
-                        img.alt = juego.nombre;
-                        img.title = juego.nombre;
-                        juegosRecomendados.appendChild(img);
-                    });
-                } else {
-                    juegosRecomendados.innerHTML = '<p style="color:#aaa">No hay juegos recomendados aún.</p>';
-                }
-            }
-
-            setTimeout(recomendarJuegos, 2000);
-            document.querySelector('.close-rec').addEventListener('click', () => {
-                recomendacionBox.style.display = 'none';
-            });
 
             // ================================
-            // 3. MODO NOVATO
+            // 5. MODAL Y RESTO (como en script.js, pero integrado)
             // ================================
-            const btnNovato = document.getElementById('btnNovato');
-            const tutorialModal = document.getElementById('tutorialModal');
-            const tutorialClose = document.querySelector('.tutorial-close');
-            const tutorialSteps = document.getElementById('tutorialSteps');
+            const modal = document.getElementById('gameModal');
+            const closeBtn = document.querySelector('.close');
 
-            const pasos = [
-                { icon: 'fas fa-download', title: '1. Cómo descargar', text: 'Haz clic en "Gofile" y luego en "Download" en la página que se abre.' },
-                { icon: 'fas fa-file-archive', title: '2. Descomprimir archivos', text: 'Usa WinRAR o 7-Zip para extraer el archivo .zip o .rar al escritorio.' },
-                { icon: 'fas fa-cog', title: '3. Instalar el juego', text: 'Entra a la carpeta descomprimida y ejecuta el juego.' }
-            ];
+            function openModal(game) {
+                document.getElementById('modalImage').src = game.imagen;
+                document.getElementById('modalTitle').textContent = game.nombre;
+                document.getElementById('modalInfo').textContent = game.descripcion;
+                document.getElementById('modalRequirements').textContent = game.requisitos;
+                document.getElementById('modalRating').textContent = game.rating;
+                document.getElementById('modalDownloads').textContent = `Descargado por +${game.downloads.toLocaleString()} usuarios`;
+                document.getElementById('linkGofile').href = game.links?.direct || '#';
 
-            pasos.forEach(paso => {
-                const step = document.createElement('div');
-                step.className = 'step';
-                step.innerHTML = `<h3><i class="${paso.icon}"></i> ${paso.title}</h3><p>${paso.text}</p>`;
-                tutorialSteps.appendChild(step);
+                const commentsContainer = document.getElementById('commentsContainer');
+                commentsContainer.innerHTML = '';
+                [...(game.comments || []), ...loadComments(game.id)].forEach(text => {
+                    const div = document.createElement('div');
+                    div.className = 'comment';
+                    div.textContent = text;
+                    commentsContainer.appendChild(div);
+                });
+
+                modal.dataset.gameId = game.id;
+                modal.style.display = 'block';
+                document.body.style.overflow = 'hidden';
+            }
+
+            closeBtn?.addEventListener('click', () => {
+                modal.style.display = 'none';
+                document.body.style.overflow = 'auto';
             });
 
-            btnNovato.addEventListener('click', () => {
-                tutorialModal.style.display = 'block';
-                const steps = tutorialSteps.querySelectorAll('.step');
-                steps.forEach((step, i) => setTimeout(() => step.classList.add('active'), i * 300));
-            });
-
-            tutorialClose.addEventListener('click', () => {
-                tutorialModal.style.display = 'none';
-                tutorialSteps.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-            });
-
-            window.addEventListener('click', (e) => {
-                if (e.target === tutorialModal) {
-                    tutorialModal.style.display = 'none';
-                    tutorialSteps.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
+            window.addEventListener('click', e => {
+                if (e.target === modal) {
+                    modal.style.display = 'none';
+                    document.body.style.overflow = 'auto';
                 }
             });
+
+            // Comentarios
+            function loadComments(id) {
+                const saved = localStorage.getItem(`comments_${id}`);
+                return saved ? JSON.parse(saved) : [];
+            }
+
+            document.getElementById('addCommentBtn')?.addEventListener('click', function () {
+                const input = document.getElementById('commentInput');
+                const currentGameId = modal.dataset.gameId;
+                if (input.value.trim() && currentGameId) {
+                    const comments = loadComments(currentGameId);
+                    comments.push(input.value.trim());
+                    localStorage.setItem(`comments_${currentGameId}`, JSON.stringify(comments));
+                    const div = document.createElement('div');
+                    div.className = 'comment';
+                    div.textContent = input.value.trim();
+                    document.getElementById('commentsContainer').appendChild(div);
+                    input.value = '';
+                }
+            });
+
+            // Cargar tema guardado
+            const savedTheme = localStorage.getItem('selectedTheme');
+            if (savedTheme !== null) {
+                document.body.setAttribute('data-theme', savedTheme);
+                document.getElementById('theme-selector').value = savedTheme;
+            }
+
+            window.changeTheme = function () {
+                const theme = document.getElementById('theme-selector').value;
+                document.body.setAttribute('data-theme', theme);
+                localStorage.setItem('selectedTheme', theme);
+            };
+
+            window.randomGame = function () {
+                if (recursos && recursos.length > 0) {
+                    const game = recursos[Math.floor(Math.random() * recursos.length)];
+                    openModal(game);
+                }
+            };
+
+            window.enableLowResourceMode = function () {
+                document.querySelectorAll('img:not(.gallery__container img)').forEach(img => img.style.display = 'none');
+                const style = document.createElement('style');
+                style.textContent = '* { animation: none !important; transition: none !important; }';
+                document.head.appendChild(style);
+                alert('📱 Modo bajo recursos activado.');
+            };
         });
     </script>
-    <script src="script.js"></script>
 </body>
 </html>
