--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* ===== PESTAÑAS DE NAVEGACIÓN ===== */
         .nav-tabs {
             display: flex;
             justify-content: center;
@@ -16,7 +15,6 @@
             margin: 15px 0 20px;
             flex-wrap: wrap;
         }
-
         .tab-btn {
             padding: 10px 20px;
             background: #1e2a47;
@@ -31,19 +29,15 @@
             align-items: center;
             gap: 8px;
         }
-
         .tab-btn.active {
             background: #00ffcc;
             color: #003333;
             box-shadow: 0 2px 8px rgba(0, 255, 204, 0.3);
         }
-
         .tab-btn:hover:not(.active) {
             background: #2a3a5a;
             color: #00ffcc;
         }
-
-        /* ===== HEADER ===== */
         header {
             display: flex;
             align-items: center;
@@ -51,45 +45,35 @@
             padding: 15px;
             justify-content: space-between;
         }
-
         .search-container {
             flex-grow: 1;
             margin: 0 20px;
             max-width: 500px;
         }
-
         #theme-selector {
             margin-left: 0;
         }
-
         @media (max-width: 768px) {
             header {
                 flex-direction: column;
                 align-items: flex-start;
             }
-
             .search-container {
                 order: 3;
                 width: 100%;
                 margin: 15px 0 0 0;
             }
-
             .boton-telegram {
                 margin-top: 10px;
                 margin-left: 0;
             }
         }
-
-        /* ===== SECCIONES ===== */
         #juegos-section, #sistemas-section {
             display: none;
         }
-
         #juegos-section.active, #sistemas-section.active {
             display: block;
         }
-
-        /* ===== GALERÍA DE SISTEMAS ===== */
         .gallery-sistemas {
             width: 90%;
             max-width: 1300px;
@@ -100,7 +84,6 @@
             padding: 15px 0;
             justify-items: center;
         }
-
         .tarjeta-sistema {
             width: 100%;
             height: 220px;
@@ -113,19 +96,16 @@
             position: relative;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
-
         .tarjeta-sistema:hover {
             transform: scale(1.03) translateY(-2px);
             box-shadow: 0 5px 15px rgba(0, 255, 204, 0.3);
             border-color: #00ffcc;
         }
-
         .tarjeta-sistema img {
             width: 100%;
             height: 140px;
             object-fit: cover;
         }
-
         .tarjeta-sistema .info {
             padding: 10px;
             background: #141d33;
@@ -133,13 +113,11 @@
             color: #ccc;
             text-align: center;
         }
-
         .tarjeta-sistema .nombre {
             font-weight: 600;
             color: #00ffcc;
             margin-bottom: 5px;
         }
-
         .tarjeta-sistema .tarjeta {
             font-size: 12px;
             color: #aaa;
@@ -164,7 +142,6 @@
         </div>
     </header>
 
-    <!-- PESTAÑAS -->
     <div class="nav-tabs">
         <button class="tab-btn active" data-tab="juegos">
             <i class="fas fa-gamepad"></i> Juegos
@@ -175,7 +152,6 @@
     </div>
 
     <main>
-        <!-- SECCIÓN JUEGOS -->
         <section id="juegos-section" class="active">
             <div class="gallery__container" id="gallery">
                 <p style="color: #aaa; text-align: center;">Cargando juegos...</p>
@@ -185,14 +161,12 @@
             </div>
         </section>
 
-        <!-- SECCIÓN SISTEMAS -->
         <section id="sistemas-section">
             <div class="gallery-sistemas" id="gallerySistemas">
-                <p style="color: #aaa; font-size: 14px; text-align: center;">Cargando sistemas operativos...</p>
+                <p style="color: #aaa; text-align: center;">Cargando sistemas operativos...</p>
             </div>
         </section>
 
-        <!-- CONTACTO -->
         <section class="contact-section">
             <h2>¿Necesitas ayuda?</h2>
             <p>Contáctanos si tienes problemas con una descarga o reportar un error.</p>
@@ -209,13 +183,11 @@
             </form>
         </section>
 
-        <!-- AGRADECIMIENTO -->
         <div style="text-align: center; margin: 40px 0; padding: 20px; font-size: 18px; color: #00ffcc;">
             <p>🎮 ¡Gracias por apoyar la web, amigo! La Contraseña ES 123🎮</p>
         </div>     
     </main>
 
-    <!-- MODAL DE JUEGO -->
     <div id="gameModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -253,7 +225,6 @@
         </div>
     </div>
 
-    <!-- BOTONES Y MODALES -->
     <button id="btnNovato" class="btn-novato">🎮 Soy nuevo</button>
     <div id="tutorialModal" class="tutorial-modal">
         <div class="tutorial-content">
@@ -268,70 +239,36 @@
         <div id="juegosRecomendados" class="juegos-rec"></div>
     </div>
 
-    <!-- NOTIFICACIONES Y BOTONES -->
     <div id="notifications"></div>
     <button onclick="randomGame()" style="position: fixed; bottom: 80px; right: 20px; z-index: 1000; background: #9c27b0; color: white; border: none; padding: 15px; border-radius: 50%; font-size: 18px; cursor: pointer;">🎲</button>
     <button onclick="enableLowResourceMode()" style="position: fixed; bottom: 140px; right: 20px; z-index: 1000; background: #2196F3; color: white; border: none; padding: 15px; border-radius: 50%; font-size: 18px; cursor: pointer;">📱</button>
 
-    <!-- CARGA DE SCRIPTS EN ORDEN -->
     <script src="data.js"></script>
     <script src="sistemas.js"></script>
-    <script src="script.js"></script>
-
     <script>
-        // ================================
-        // 1. MANEJO DE PESTAÑAS (ÚNICO DOMContentLoaded)
-        // ================================
         document.addEventListener('DOMContentLoaded', function () {
             const tabs = document.querySelectorAll('.tab-btn');
             const juegosSection = document.getElementById('juegos-section');
             const sistemasSection = document.getElementById('sistemas-section');
+            const gallery = document.getElementById('gallery');
+            const loadMoreBtn = document.getElementById('loadMoreBtn');
+            const searchInput = document.getElementById('searchInput');
+            const modal = document.getElementById('gameModal');
 
-            // Verificar si recursos y sistemas están definidos
-            if (!window.recursos) {
-                document.getElementById('gallery').innerHTML = '<p style="color: #ff3366; text-align: center;">❌ Error: No se cargaron los juegos. Revisa data.js</p>';
-            } else {
-                loadGames(); // Carga inicial de juegos
-            }
-
-            if (!window.sistemas) {
-                document.getElementById('gallerySistemas').innerHTML = '<p style="color: #ff3366; text-align: center;">❌ Error: No se cargaron los sistemas. Revisa sistemas.js</p>';
-            } else {
-                mostrarSistemas();
-            }
-
-            // Cambiar entre pestañas
-            tabs.forEach(tab => {
-                tab.addEventListener('click', () => {
-                    tabs.forEach(t => t.classList.remove('active'));
-                    tab.classList.add('active');
-
-                    if (tab.dataset.tab === 'juegos') {
-                        juegosSection.classList.add('active');
-                        sistemasSection.classList.remove('active');
-                    } else {
-                        sistemasSection.classList.add('active');
-                        juegosSection.classList.remove('active');
-                    }
-                });
-            });
-
-            // ================================
-            // 2. CARGA DE JUEGOS
-            // ================================
             let displayedGames = 0;
             const gamesPerLoad = 2;
 
+            // Cargar juegos
+            if (!window.recursos) {
+                gallery.innerHTML = '<p style="color: #ff3366; text-align: center;">❌ Error: No se cargaron los juegos. Revisa data.js</p>';
+            } else {
+                loadGames();
+            }
+
             function loadGames() {
-                const gallery = document.getElementById('gallery');
                 const toLoad = recursos.slice(displayedGames, displayedGames + gamesPerLoad);
-
-                if (toLoad.length === 0 && displayedGames === 0) {
-                    gallery.innerHTML = '<p style="color: #aaa; text-align: center;">No hay juegos disponibles.</p>';
-                    return;
-                }
-
                 const fragment = document.createDocumentFragment();
+
                 toLoad.forEach(game => {
                     const img = document.createElement('img');
                     img.src = game.imagen;
@@ -342,23 +279,18 @@
                     fragment.appendChild(img);
                 });
 
-                gallery.innerHTML = ''; // Limpia mensaje de carga
+                gallery.innerHTML = '';
                 gallery.appendChild(fragment);
                 displayedGames += toLoad.length;
 
-                const loadMoreBtn = document.getElementById('loadMoreBtn');
                 if (displayedGames >= recursos.length) {
                     loadMoreBtn.style.display = 'none';
                 }
             }
 
-            document.getElementById('loadMoreBtn')?.addEventListener('click', loadGames);
-
-            // ================================
-            // 3. BÚSQUEDA
-            // ================================
-            document.getElementById('searchInput').addEventListener('input', function () {
-                const term = this.value.toLowerCase();
+            // Buscador
+            searchInput.addEventListener('input', () => {
+                const term = searchInput.value.toLowerCase();
                 document.querySelectorAll('.game-item').forEach(img => {
                     const gameId = img.dataset.gameId;
                     const game = recursos.find(g => g.id == gameId);
@@ -369,19 +301,24 @@
                 });
             });
 
-            // ================================
-            // 4. MOSTRAR SISTEMAS
-            // ================================
-            function mostrarSistemas() {
+            // Botón "Ver más"
+            loadMoreBtn?.addEventListener('click', loadGames);
+
+            // Pestañas
+            tabs.forEach(tab => {
+                tab.addEventListener('click', () => {
+                    tabs.forEach(t => t.classList.remove('active'));
+                    tab.classList.add('active');
+                    juegosSection.classList.toggle('active', tab.dataset.tab === 'juegos');
+                    sistemasSection.classList.toggle('active', tab.dataset.tab === 'sistemas');
+                });
+            });
+
+            // Mostrar sistemas
+            if (window.sistemas && Array.isArray(sistemas)) {
                 const contenedor = document.getElementById('gallerySistemas');
                 contenedor.innerHTML = '';
-
-                if (!window.sistemas || !Array.isArray(window.sistemas)) {
-                    contenedor.innerHTML = '<p style="color: #aaa; text-align: center;">No hay sistemas disponibles.</p>';
-                    return;
-                }
-
-                window.sistemas.forEach(sistema => {
+                sistemas.forEach(sistema => {
                     const tarjeta = document.createElement('div');
                     tarjeta.className = 'tarjeta-sistema';
                     tarjeta.innerHTML = `
@@ -396,20 +333,24 @@
                 });
             }
 
-            // ================================
-            // 5. MODAL Y RESTO (como en script.js, pero integrado)
-            // ================================
-            const modal = document.getElementById('gameModal');
-            const closeBtn = document.querySelector('.close');
-
+            // Modal
             function openModal(game) {
                 document.getElementById('modalImage').src = game.imagen;
                 document.getElementById('modalTitle').textContent = game.nombre;
                 document.getElementById('modalInfo').textContent = game.descripcion;
-                document.getElementById('modalRequirements').textContent = game.requisitos;
+                document.getElementById('modalRequirements').innerHTML = game.requisitos;
                 document.getElementById('modalRating').textContent = game.rating;
                 document.getElementById('modalDownloads').textContent = `Descargado por +${game.downloads.toLocaleString()} usuarios`;
-                document.getElementById('linkGofile').href = game.links?.direct || '#';
+
+                const link = document.getElementById('linkGofile');
+                if (game.links?.direct) {
+                    link.href = game.links.direct;
+                    link.textContent = "📥 Descargar (Gofile)";
+                } else {
+                    link.href = "#";
+                    link.textContent = "⚠️ Enlace no disponible";
+                    link.style.opacity = "0.6";
+                }
 
                 const commentsContainer = document.getElementById('commentsContainer');
                 commentsContainer.innerHTML = '';
@@ -425,7 +366,7 @@
                 document.body.style.overflow = 'hidden';
             }
 
-            closeBtn?.addEventListener('click', () => {
+            document.querySelector('.close')?.addEventListener('click', () => {
                 modal.style.display = 'none';
                 document.body.style.overflow = 'auto';
             });
@@ -458,27 +399,27 @@
                 }
             });
 
-            // Cargar tema guardado
-            const savedTheme = localStorage.getItem('selectedTheme');
-            if (savedTheme !== null) {
-                document.body.setAttribute('data-theme', savedTheme);
-                document.getElementById('theme-selector').value = savedTheme;
-            }
-
+            // Tema
             window.changeTheme = function () {
                 const theme = document.getElementById('theme-selector').value;
                 document.body.setAttribute('data-theme', theme);
                 localStorage.setItem('selectedTheme', theme);
             };
 
-            window.randomGame = function () {
+            const savedTheme = localStorage.getItem('selectedTheme');
+            if (savedTheme !== null) {
+                document.body.setAttribute('data-theme', savedTheme);
+                document.getElementById('theme-selector').value = savedTheme;
+            }
+
+            // Funciones globales
+            window.randomGame = () => {
                 if (recursos && recursos.length > 0) {
-                    const game = recursos[Math.floor(Math.random() * recursos.length)];
-                    openModal(game);
+                    openModal(recursos[Math.floor(Math.random() * recursos.length)]);
                 }
             };
 
-            window.enableLowResourceMode = function () {
+            window.enableLowResourceMode = () => {
                 document.querySelectorAll('img:not(.gallery__container img)').forEach(img => img.style.display = 'none');
                 const style = document.createElement('style');
                 style.textContent = '* { animation: none !important; transition: none !important; }';
